# finesse-app

./: .gitignore  README.md  docker-compose.yml  project_summary.md  setup_lessons.py  test_cors.py  test_server.py
backend/: Dockerfile  clear_and_reseed.py  database_upgrade.py  docker-compose.yml  migrate_db.py  pyproject.toml  requirements.txt  seed_data.py  seed_lessons.py  simple_server.py  start_server.py  test_api.py  test_server.py
backend/app/: config.py  crud.py  database.py  main.py  mocks.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  lessons.py  tutor.py  users.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  cursorGlow.js  index.css
frontend/src/assets/: icons.tsx
frontend/src/components/: LoadingSpinner.tsx  TopBar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: DailyChallengePage.tsx  Leaderboard.tsx  LessonPage.tsx  Login.tsx  Register.tsx  Tutor.tsx  dashboard.tsx
frontend/src/services/: api.ts  lessonService.ts  mockApi.ts
frontend/src/styles/: Auth.css  DailyChallenge.css  Dashboard.css  LessonPage.css  LoadingSpinner.css
frontend/src/types/: index.ts  lessons.ts
frontend/src/utils/: userStorage.ts
